extends Control


func _on_koweit_pressed():
	get_tree().change_scene_to_file("res://scenes/home.tscn")

func _on_yemen_pressed():
	get_tree().change_scene_to_file("res://scenes/home.tscn")

func _on_emirats_pressed():
	get_tree().change_scene_to_file("res://scenes/home.tscn")

func _on_egypte_pressed():
	get_tree().change_scene_to_file("res://scenes/egypte/level_egypte.tscn")

func _on_retour_pressed():
	get_tree().change_scene_to_file("res://scenes/home.tscn")
